src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    input:-webkit-autofill,
    input:-webkit-autofill:enabled,
    input:-webkit-autofill:hover,
    input:-webkit-autofill:focus,
    textarea:-webkit-autofill,
    textarea:-webkit-autofill:enabled,
    textarea:-webkit-autofill:hover,
    textarea:-webkit-autofill:focus,
    select:-webkit-autofill,
    select:-webkit-autofill:enabled,
    select:-webkit-autofill:hover,
    select:-webkit-autofill:focus {
    -webkit-text-fill-color: #ffffff;
    -webkit-box-shadow: 0 0 0px 1000px #1a1d1d inset;
    box-shadow: 0 0 0px 1000px #1a1d1d inset;
    background-color: #1a1d1d;
    }
}

.custom-progress::-webkit-progress-value {
    background-color: #f0f4f8;
    border-top-left-radius: 9999px;
    border-bottom-left-radius: 9999px;
    /* Set the background color for the progress bar */
}

progress::-webkit-progress-bar {
    border-radius: 9999px;
}

#file::-webkit-progress-bar {
    border-radius: 0;
}

#file::-webkit-progress-value {
    background-color: blue;

}

